fix for height of gallery on homepage so it stops jumping

--- a/tapas_redesign/assets/sass/components/home.scss
+++ b/tapas_redesign/assets/sass/components/home.scss
@@ -74,6 +74,13 @@
   .carousel-inner {
     width: 96%;
     margin-left: 2%;
+    > .item > img, > .item > a > img{
+      width:auto;
+      max-width:100%;
+      height:200px;
+      margin-left:auto;
+      margin-right:auto;
+    }
   }
   .carousel-caption{
     margin: 10%;
